k8s/frontend/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend-ns
  labels:
    name: frontend-ns
