k8s/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-fe
  namespace: frontend-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore-fe
  template:
    metadata:
      labels:
        app: bookstore-fe
    spec:
      containers:
      - name: bookstore-fe
        image: bookstore/frontend:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 300m
            memory: 256Mi

          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
