k8s/frontend/deplyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-fe
  labels:
    app: bookstore-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore-fe
  template:
    metadata:
      labels:
        app: bookstore-fe
    spec:
      containers:
        - name: bookstore-fe
          image: bookstore/frontend:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path
