k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstore-fe-svc
spec:
  selector:
    app: bookstore-fe
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
